--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --color-main: #2034a3;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -121,6 +122,13 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground max-w-full mx-auto overflow-x-hidden;
   }
+  button {
+    @apply cursor-pointer;
+  }
+}
+
+.max-width {
+  @apply max-w-[1280px] mx-auto px-4;
 }
