--- a/src/components/modules/home/hero/Hero.module.css
+++ b/src/components/modules/home/hero/Hero.module.css
@@ -1,5 +1,5 @@
 .banner {
-  background: url("../../../assets/heroBanner.webp");
+  background: url("../../../../assets/heroBanner.webp");
   height: 500px;
   background-size: cover;
   background-position: center;
@@ -8,7 +8,7 @@
 
 @media (max-width: 768px) {
   .banner {
-    background: url("../../../assets/hero-md-device.webp");
+    background: url("../../../../assets/hero-md-device.webp");
     height: 500px;
     background-size: cover;
     background-position: center;
